# cpp-automated-testing

./: CMakeLists.txt
apps/: CMakeLists.txt  main.cpp  romanNums.cpp
include/LeapYear/: LeapYear.hpp
include/RomanNumeral/: RomanNumeral.hpp
src/: CMakeLists.txt  LeapYear.cpp  RomanNumeral.cpp
tests/: CMakeLists.txt  leapYearsTests.cpp  romanNumsTests.cpp
